--- a/.gitconfig
+++ b/.gitconfig
@@ -11,3 +11,7 @@
 	autoSetupRemote = true
 [init]
 	defaultBranch = main
+[http]
+	proxy = http://127.0.0.1:7890
+[https]
+	proxy = http://127.0.0.1:7890
