--- a/.gitconfig
+++ b/.gitconfig
@@ -1,21 +1,36 @@
 [user]
 	name = jiuhao
 	email = 815514981@qq.com
+
 [core]
 	editor = vim
+
 [credential]
 	helper = store
+
 [pull]
 	rebase = false
+
 [push]
 	autoSetupRemote = true
+
 [init]
 	defaultBranch = main
+
 [http]
 	proxy = http://127.0.0.1:7890
+
 [https]
 	proxy = http://127.0.0.1:7890
-[diff]
-	tool = vimdiff
+
 [merge]
 	tool = vimdiff
+
+[diff]
+    tool = vimdiff
+
+[difftool "vimdiff"]
+    cmd = vim -c \"DirDiffTree \"$LOCAL\" \"$REMOTE\"\"
+
+[alias]
+    showtool = "!showci () { rev=${1:-HEAD}; git difftool -d $rev~1 $rev; }; showci $1"
